syntax = "proto3";

package safir.common.v1alpha1;

import "google/api/annotations.proto";

service HostService {
  rpc Info(InfoRequest) returns (InfoResponse) {
    option (google.api.http) = {get: "/v1alpha1/host/info"};
  }
}

message InfoRequest {}

message InfoResponse {
  string host_name = 1;
  string machine_name = 2;
}
